src/test/ui/feature-gates/feature-gate-edition_macro_pats.stderr
error[E0658]: `pat2021` is unstable.
  --> $DIR/feature-gate-edition_macro_pats.rs:5:9
   |
LL |     ($x:pat2021) => {};
   |         ^^^^^^^
   |
   = note: see issue #54883 <https://github.com/rust-lang/rust/issues/54883> for more information
   = help: add `#![feature(edition_macro_pats)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
